--- a/response.tex
+++ b/response.tex
@@ -402,7 +402,7 @@ We appologize for not including these details. However due to space contraints o
 
 \BLUE 
 We apologize for the earlier lack of clarity. According to the Near Enough Optimization (NEO) framework
-(see \there{$4d}) ``near-enough'' solutions are effectively indistinguishable from the true optimum. As shown by the mathematical analysis in \there{R4d}, encountering such a near-optimal solution requires sampling only about 60 times. Our choice of setting $M=20$ follows from the ambition of staying well below this 60-sample NEO threshold. In our experiments, sampling 20 or 30 instances consistently performed as well as sampling any number above this point, with only minimal gains beyond that threshold. Thus, selecting $M=20$ reflects an engineering decision that remains faithful to the NEO theory while keeping the annotation cost low.
+(see \there{R4d}) ``near-enough'' solutions are effectively indistinguishable from the true optimum. As shown by the mathematical analysis in \there{R4d}, encountering such a near-optimal solution requires sampling only about 60 times. Our choice of setting $M=20$ follows from the ambition of staying well below this 60-sample NEO threshold. In our experiments, sampling 20 or 30 instances consistently performed as well as sampling any number above this point, with only minimal gains beyond that threshold. Thus, selecting $M=20$ reflects an engineering decision that remains faithful to the NEO theory while keeping the annotation cost low.
 \BLACK
 
 \end{enumerate}
