--- a/page1.tex
+++ b/page1.tex
@@ -1,4 +1,4 @@
-%%%%%%%%%%%%%%%%%%%%%%% file template.tex %%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%% file template.tex %%%%%%%%%%%%%%%%%%%%%%%%%
 %
 % This is a general template file for the LaTeX package SVJour3
 % for Springer journals.          Springer Heidelberg 2010/09/16
@@ -15,6 +15,7 @@
 % First comes an example EPS file -- just ignore it and
 % proceed on the \documentclass line
 % your LaTeX will extract the file if required
+
 %\documentclass{svjour3}                     % onecolumn (standard format)
 %\documentclass[smallcondensed]{svjour3}     % onecolumn (ditto)
 \documentclass[smallextended]{svjour3}       % onecolumn (second format)
@@ -41,7 +42,6 @@
 \usepackage[table,xcdraw]{xcolor}
 \usepackage[utf8]{inputenc}
 \usepackage{fancyhdr}
-\usepackage{xcolor}
 %\usepackage{lmodern}
 \usepackage{url}
 % \usepackage[hidelinks]{hyperref}
@@ -180,3 +180,6 @@ To support open science, all our data and scripts are available  at \url{https:/
 % \PACS{PACS code1 \and PACS code2 \and more}
 \end{abstract}
 
+
+
+\end{document}
