--- a/_v2.tex
+++ b/_v2.tex
@@ -54,8 +54,8 @@
 \usepackage{cite}
 
 \usepackage{graphicx}
-\usepackage{caption}
-\usepackage{subcaption}
+%\usepackage{caption}
+%\usepackage{subcaption}
 \usepackage{longtable}
 
 \definecolor{niceblue}{HTML}{0000FF}
@@ -141,7 +141,7 @@
 \date{Received: date / Accepted: date}
 % The correct dates will be entered by the editor
 
- 
+\journalname{Empirical Software Engineering}
 \maketitle
 
 \begin{abstract}
@@ -1824,7 +1824,7 @@ All too often, we read research papers where authors   overlook this step and th
  
  \begin{figure}
     \centering
-    \includegraphics[width=0.75\linewidth]{chart-all.png}
+    \includegraphics[width=0.75\linewidth]{chartall.png}
     \caption{Performance of Synthcore 20, 
     (shown in red) fall very close to the
     best possible optimal (shown in green).}
@@ -1858,7 +1858,7 @@ statistical tests that rank Synthcore's performance against other   state-of-the
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.8\linewidth]{performance_3.png}
+    \includegraphics[width=0.8\linewidth]{performance3.png}
     \caption{Performance of different active learners w.r.to budgets. Best is the average heaven values for all the datasets}% green line "lo (baseline) % yaxm=0.6
     \label{budget-vs-heaven}
 \end{figure}
@@ -1867,7 +1867,7 @@ statistical tests that rank Synthcore's performance against other   state-of-the
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.8\linewidth]{runtimes_3.png}
+    \includegraphics[width=0.8\linewidth]{runtimes3.png}
     \caption{Average Run times of different treatments, y axis is time in seconds scaled to logarithmic values and x axis is budget ranging from 20 to 100}% change y range 0.6 max" %cahnge x axis label to "Budget"
     \label{runtimes}
 \end{figure}
@@ -2273,7 +2273,7 @@ For practitioners, we recommend using SynthCore following the workflow shown in 
 
 \begin{figure}
     \centering
-    \includegraphics[width=\linewidth]{Recommendation.png}
+    \includegraphics[width=\linewidth]{recommendation.png}
     \caption{\protect\here{R3d-2} Recommendations to practitioners.}
     \label{recommend}
 \end{figure}
@@ -2403,8 +2403,6 @@ enough to use in budget-constrained settings. This makes it a
 practical building block for next-generation SE tooling.
 
 
- \newpage
- \newpage
 \section*{Declarations}
 
 \begin{description}
@@ -2433,7 +2431,6 @@ The authors have no competing interests to declare that are relevant to the cont
 \item[\bf Clinical Trial Number:] \hfill \\
 Clinical trial number: not applicable.
 \end{description}
- \newpage
 
 
 
