--- a/_v2.tex
+++ b/_v2.tex
@@ -870,8 +870,7 @@ While self-consistency focuses on improving the \emph{consistency} of model outp
 
 % Active learners help address the annotation issues discussed in \S\ref{annotate}. With fewer examples to label, analysts can focus more on label quality and complete their analysis faster by avoiding slow annotation bottlenecks.
 
-% The Achilles' heel\footnote{An “Achilles' heel” is   a sole vulnerability that undermines an otherwise strong system.} of active learning is that it must select examples by reflecting on models built so far. To begin, an initial set of “warm start” examples is required. These can be chosen via (a)~random selection (more accurately, a “cold start”); (b)~diversity sampling\footnote{E.g., clustering the data and using the centroids.}; or (c)~expert input.
-% This paper explores the idea that when experts are unavailable or costly, large language models (LLMs) can 
+% This paper explores the idea that when experts are unavailable or costly, large language models (LLMs) cannput{
 % be a useful surrogate for expert input.
 
 
@@ -2273,8 +2272,8 @@ For practitioners, we recommend using SynthCore following the workflow shown in 
 
 \begin{figure}
     \centering
-    \includegraphics[width=\linewidth]{recommendation.png}
-    \caption{\protect\here{R3d-2} Recommendations to practitioners.}
+    \includegraphics[width=\linewidth]{mend.png}
+    \caption{\protect\here{R3d-2} ~Recommendations to practitioners.}
     \label{recommend}
 \end{figure}
 
